prod_snapshot_2015-09-24_1030/objects/Invoice_LineItem__c.object
<CustomObject>
    <description>Maintains all Invoice records which can be used for billing .</description>
    <fields>
        <fullName>Invoice_AdjustmentDetails__c</fullName>
        <label>Adjustment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_CreditOrDebit_Reason__c</fullName>
        <label>Adjustment Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G/O Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_CreditOrDebit__c</fullName>
        <description>Decides the OLI_Amount__c(Invoice Line Item Total) field to be positive or negative for the ILI&apos;s created manually by clicking on the adjust Invoice button</description>
        <label>Is this an A/R Credit or Debit?</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_LineItemType__c</fullName>
        <label>ILI Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_PeriodEnd__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_PeriodStart__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_ScheduleDate__c</fullName>
        <formula>IF( MONTH(Invoice_PeriodStart__c) &lt;&gt; 12 ,
    DATE( YEAR(Invoice_PeriodStart__c) , MONTH(Invoice_PeriodStart__c)+1 ,1),
    DATE( YEAR(Invoice_PeriodStart__c)+1 , 1 ,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILI Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsSystemGenerated__c</fullName>
        <formula>OR(
Text(Invoice_LineItemType__c) == &apos;Standard&apos;,
Text(Invoice_LineItemType__c) == &apos;Cancellation&apos;,
Text(Invoice_LineItemType__c) == &apos;Cancel&apos;,
Text(Invoice_LineItemType__c) == &apos;Kill&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Spend__c</fullName>
        <formula>IF(OR(ISPICKVAL(Invoice_LineItemType__c,&apos;Manual&apos;),ISPICKVAL(Invoice_LineItemType__c,&apos;Adjustment&apos;)),null,IF( ProjectRef__r.Related_Product__r.HasMediaSpend__c = true,  Product_Price__c , null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mgmt_Fee__c</fullName>
        <formula>IF(OR(ISPICKVAL(Invoice_LineItemType__c,&apos;Manual&apos;),ISPICKVAL(Invoice_LineItemType__c,&apos;Adjustment&apos;)),null,ProjectRef__r.Mgmt_Fee_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mgmt Fee %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <formula>ProjectRef__r.Qty_ContractMonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <formula>ProjectRef__r.Invoice_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_ID__c</fullName>
        <formula>ProjectRef__r.Product_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related OLI ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRef__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <formula>ProjectRef__r.UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectRef__c</fullName>
        <label>Related Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyCharge__c</fullName>
        <label>Total Monthly Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wholesale_Fee__c</fullName>
        <formula>IF(OR(ISPICKVAL(Invoice_LineItemType__c,&apos;Manual&apos;),ISPICKVAL(Invoice_LineItemType__c,&apos;Adjustment&apos;)),null,IF( ProjectRef__r.Related_Product__r.HasMediaSpend__c = true ,  TotalMonthlyCharge__c -  Product_Price__c ,  Product_Price__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesale Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <label>ILI</label>
    <nameField>
        <displayFormat>ILI-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>To_Edit_the_Period_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED( Invoice_PeriodEnd__c ),
ISCHANGED( Invoice_PeriodStart__c )  
),
OR(
isDeleted__c = true, 
isLocked__c = true
) 
)</errorConditionFormula>
        <errorMessage>The ILI must be unlocked and not deleted in order to edit the Period Dates.</errorMessage>
    </validationRules>
</CustomObject>